tests/valid/definite/Subtype_Valid_5.whiley
define int where $ > 0 as sr5nat

void System::main([string] args):
    (sr5nat f) x = (f:1)
    x.f = 2
    print str(x)
    
