tests/invalid/simple/Subtype_CompileFail_5.whiley
define int where $ > 0 as scf5nat

void System::main([string] args):
    (scf5nat f) x = (f:1)
    x.f = -1
    
